package state;

interface State {
    void handleRequest();
}
